# tinynmc

./: .pylintrc  .readthedocs.yaml  LICENSE  README.rst  pyproject.toml
.github/workflows/: lint-test-cover-docs.yml
docs/: Makefile  conf.py  index.rst  make.bat  toc.rst
docs/_source/: tinynmc.rst
docs/_templates/: package.rst_t
notebooks/: basic.ipynb
src/tinynmc/: __init__.py  tinynmc.py
